<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_ch">乌龙岛</string>
    <string name="app_name_en">wulongdao</string>
    <string name="default_from">来自手机客户端</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="email">邮箱</string>
    <string name="exit">退出</string>
    <string name="logoff">注销</string>
    <string name="modify_password">修改密码</string>
    <string name="name">帐号</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="password_new">新的密码</string>
    <string name="password_old">当前密码</string>
    <string name="password_repeat">重复密码</string>
    <string name="profile_info">个人资料</string>
    <string name="prompt">提示</string>
    <string name="prompt_email_empty">邮箱不能为空值</string>
    <string name="prompt_email_format">邮箱格式不正确</string>
    <string name="prompt_hint_camera_shooting">相机拍摄</string>
    <string name="prompt_hint_comment_post_message">用语音+照片+文字方式可表述得更清楚</string>
    <string name="prompt_hint_email">请输入注册邮箱</string>
    <string name="prompt_hint_name">输入邮箱或昵称</string>
    <string name="prompt_hint_nickname">请输入个性昵称</string>
    <string name="prompt_hint_password">请输入登录密码</string>
    <string name="prompt_hint_phone_album">手机相册</string>
    <string name="prompt_hint_question_post_message">用语音+照片+文字方式可表述得更清楚</string>
    <string name="prompt_message_empty">内容不能为空值</string>
    <string name="prompt_message_format">内容需250字内</string>
    <string name="prompt_name_empty">帐号不能为空值</string>
    <string name="prompt_nickname_empty">昵称不能为空值</string>
    <string name="prompt_nickname_format">昵称需4~10字</string>
    <string name="prompt_no_network">当前未联网会影响使用</string>
    <string name="prompt_no_sdcard">未检测到SD卡无法使用</string>
    <string name="prompt_password_empty">密码不能为空值</string>
    <string name="prompt_password_format">密码需6~16字</string>
    <string name="prompt_password_new_repeat">新密码需前后一致</string>
    <string name="prompt_password_old_new">新旧密码不能一致</string>
    <string name="prompt_progress">加载中,请稍后…</string>
    <string name="prompt_progress_login">登录中,请稍后…</string>
    <string name="prompt_progress_modify">修改中,请稍后…</string>
    <string name="prompt_progress_post">发布中,请稍后…</string>
    <string name="prompt_progress_register">注册中,请稍后…</string>
    <string name="prompt_record_start">正在录音</string>
    <string name="prompt_record_stop">录音结束</string>
    <string name="prompt_register_fail">注册失败</string>
    <string name="prompt_select">请选择</string>
    <string name="prompt_unkown_error">服务未响应请稍后再试</string>
    <string name="prompt_whether_to_exit">确定要退出乌龙岛吗?</string>
    <string name="prompt_whether_to_logoff">确定要注销换帐号吗?</string>
    <string name="pull_to_refresh_last_updated">更新于:</string>
    <string name="pull_to_refresh_loading">加载中,请稍后…</string>
    <string name="pull_to_refresh_no_data">没有更多数据了</string>
    <string name="pull_to_refresh_pull">下拉可以刷新…</string>
    <string name="pull_to_refresh_release">松开可以刷新…</string>
    <string name="pull_to_refresh_tap">点击可以刷新…</string>
    <string name="upload_avatar">上传头像</string>
    <string name="title_comment_post">发布新回复</string>
    <string name="title_profile_info">个人资料页</string>
    <string name="title_user_avatar">上传新头像</string>
    <string name="title_user_login">登录</string>
    <string name="title_user_modify_password">修改密码页</string>
    <string name="title_user_register">注册新用户</string>
    <string name="title_question_detail">求助正文页</string>
    <string name="title_question_list">信息中心页</string>
    <string name="title_question_post">发布新求助</string>

</resources>