<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_bitmap"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/top_v1" />

    <RelativeLayout
        android:id="@+id/user_login_layout_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:id="@+id/user_login_tv_name"
            style="@style/text_18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/user_login_et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/user_login_tv_name"
            android:layout_marginLeft="5.0dip"
            android:layout_toRightOf="@id/user_login_tv_name"
            android:hint="@string/prompt_hint_name" />

        <EditText
            android:id="@+id/user_login_et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/user_login_et_name"
            android:layout_below="@id/user_login_et_name"
            android:layout_marginTop="5.0dip"
            android:hint="@string/prompt_hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/user_login_tv_password"
            style="@style/text_18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/user_login_tv_name"
            android:layout_alignTop="@id/user_login_et_password"
            android:text="@string/password" />
    </RelativeLayout>

</RelativeLayout>